using UnityEngine;

public class FloatingObject
{
	public Vector2 position;
	public float size;

	public FloatingObject(Vector2 position, float size)
	{
		this.position = position;
		this.size = size;
	}
}
